--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+info.app.name=My Name App
+info.app.description=Some description
+info.app.version=1.0.0
 
+
+#Context path of the app
+
+server.servlet.context-path=/mami
+
+#Custom properties
+coach.name=Alex
+team.name=Ali
+
+
+management.endpoints.web.exposure.include=*
+server.port=8083
+
+#Security
+spring.security.user.name=admin
+spring.security.user.password=secret
