--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ info.app.version=1.0.0
 
 #Context path of the app
 
-server.servlet.context-path=/mami
+server.servlet.context-path=/api
 
 #Custom properties
 coach.name=Alex
@@ -18,3 +18,11 @@ server.port=8083
 #Security
 spring.security.user.name=admin
 spring.security.user.password=secret
+
+
+#Connection props
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/employee_directory
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
+spring.datasource.username=springuser
+spring.datasource.password=ThePassword
