--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,10 @@ info.app.version=1.0.0
 
 #Context path of the app
 
-server.servlet.context-path=/api
+#server.servlet.context-path=/api
+
+spring.data.rest.base-path=/magic-api
+
 
 #Custom properties
 coach.name=Alex
